more tests, various minor bits

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,8 @@
 {
+  "plugins": ["react-hooks"],
   "extends": ["react-app", "prettier"],
-  "rules": {}
+  "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
+  }
 }
