--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hooks",
-  "version": "0.1.0",
+  "name": "react-micropub-client",
+  "version": "0.3.0",
   "private": true,
   "husky": {
     "hooks": {
