--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     ]
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "@testing-library/dom": "^5.2.0",
+    "@testing-library/react": "^8.0.1",
+    "axios": "^0.19.0",
     "eslint-config-prettier": "^4.3.0",
     "husky": "^2.3.0",
     "jest-dom": "^3.2.2",
@@ -25,7 +27,6 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "react-testing-library": "^7.0.0",
     "styled-components": "^4.2.0"
   },
   "scripts": {
