--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "jest-dom": "^3.2.2",
     "jest-mock-axios": "^3.0.0",
     "lint-staged": "^8.1.7",
-    "marked": "^0.6.2",
+    "marked": "^0.8.0",
     "prettier": "^1.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.0",
     "styled-components": "^4.2.0"
   },
   "scripts": {
